@@ -160,6 +160,10 @@ Log::Log4perl
 
 =item *
 
+Log::Log4perl::Appender::TAP
+
+=item *
+
 Module::CoreList
 
 =item *
@@ -289,6 +293,10 @@ Template
 =item *
 
 Template::Tiny
+
+=item *
+
+Test::Clustericious::Cluster
 
 =item *
 
