@@ -30,30 +30,31 @@ AnyEvent::Ident                                = 0.05
 AnyEvent::Open3::Simple                        = 0.67
 App::RegexFileUtils                            = 0.05
 Authen::Simple::PlugAuth                       = 0.01
-Clustericious                                  = 0.9925
-Clustericious::Client                          = 0.81
-Clustericious::Config                          = 0.18
+Clustericious                                  = 0.9927
+Clustericious::Client                          = 0.82
+Clustericious::Config                          = 0.23
+Clustericious::Log                             = 0.12
 File::Listing::Ftpcopy                         = 0.04
 Lingua::Alphabet::Phonetic::LAPD               = 0.02
+Log::Log4perl::Appender::TAP                   = 0.01
 Mojolicious::Plugin::Ident                     = 0.29
 Mojolicious::Plugin::TtRenderer                = 1.46
-PlugAuth                                       = 0.18
-PlugAuth::Client                               = 0.18
+PlugAuth                                       = 0.20
+PlugAuth::Client                               = 0.19
 PlugAuth::Client::Tiny                         = 0.01
 PlugAuth::Lite                                 = 0.05
-PlugAuth::Plugin::Audit                        = 0.04
-PlugAuth::Plugin::DBIAuth                      = 0.02
+PlugAuth::Plugin::Audit                        = 0.05
+PlugAuth::Plugin::DBIAuth                      = 0.03
 PlugAuth::Plugin::LDAP                         = 0.04
 PlugAuth::Plugin::Finger                       = 0.01
 Shell::Config::Generate                        = 0.08
 Shell::Guess                                   = 0.01
 Test::Fixme                                    = 0.09
-WebService::LiveJournal                        = 0.04
+Test::Clustericious::Cluster                   = 0.04
+WebService::LiveJournal                        = 0.06
 WebService::TwitterBootstrap::Download::Custom = 0.01
-Yars::Client                                   = 0.86
-Yars                                           = 0.83
-
-Clustericious::Log                             = 0.10
+Yars::Client                                   = 0.87
+Yars                                           = 0.84
 
 AnyEvent                                       = 0
 App::Ack                                       = 0
