@@ -1,6 +1,6 @@
 use strict;
 use warnings;
-use Test::More tests => 94;
+use Test::More tests => 96;
 use_ok 'Task::BeLike::Plicease';
 require_ok 'AnyEvent';
 require_ok 'AnyEvent::Finger';
@@ -43,6 +43,7 @@ require_ok 'JSON::XS';
 require_ok 'Lingua::Alphabet::Phonetic::LAPD';
 require_ok 'local::lib';
 require_ok 'Log::Log4perl';
+require_ok 'Log::Log4perl::Appender::TAP';
 require_ok 'Module::CoreList';
 require_ok 'Module::Which';
 require_ok 'Mojo::JSON::Any';
@@ -79,6 +80,7 @@ require_ok 'Shell::Guess';
 require_ok 'String::Template';
 require_ok 'Template';
 require_ok 'Template::Tiny';
+require_ok 'Test::Clustericious::Cluster';
 require_ok 'Test::Differences';
 require_ok 'Test::Dir';
 require_ok 'Test::EOL';
